--- a/style.css
+++ b/style.css
@@ -23,20 +23,24 @@ body {
     font-size: 24px;
 }
 
-.display {
-    margin-bottom: 15px;
-}
-
 .display input {
     width: 100%;
     height: 50px;
     border: none;
     border-radius: 10px;
     background-color: #f0f0f0;
-    text-align: right;
+    text-align: left; 
     padding: 0 15px;
     font-size: 24px;
     box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 5px 0;
+    box-sizing: border-box; 
+}
+
+
+.display {
+    margin: 10px 0; 
+    padding: 0 5px;
 }
 
 .error-message {
